force-app/main/default/objects/Firm_Product_Group_Rollup_USD__c/Firm_Product_Group_Rollup_USD__c.object-meta.xml
<CustomObject>
    <description>FSS 4a: one row per Firm x Commercial Group. Persisted, reportable family/group rollups in USD. Maintained by FirmRollupService (upsert by Firm_Group_Key__c, delete-on-zero).</description>
    <label>Firm Product Group Rollup (USD)</label>
    <nameField>
        <displayFormat>FPGR-{00000000}</displayFormat>
        <label>Rollup Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Firm Product Group Rollups (USD)</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>