force-app/main/default/objects/Firm_Product_Group_Rollup_USD__c/fields/Commercial_Group__c.field-meta.xml
<CustomField>
    <fullName>Commercial_Group__c</fullName>
    <description>FSS: reporting dimension (commercial group) resolved from Product_Family_Group__mdt.</description>
    <label>Commercial Group</label>
    <length>255</length>
    <type>Text</type>
</CustomField>