force-app/main/default/objects/Firm_Product_Group_Rollup_USD__c/fields/Firm__c.field-meta.xml
<CustomField>
    <fullName>Firm__c</fullName>
    <deleteConstraint>Cascade</deleteConstraint>
    <description>FSS: the Firm (Account, Firm record type) this group rollup belongs to.</description>
    <label>Firm</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Firm Product Group Rollups</relationshipLabel>
    <relationshipName>Firm_Product_Group_Rollups</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>