force-app/main/default/objects/Firm_Product_Group_Rollup_USD__c/fields/Firm_Group_Key__c.field-meta.xml
<CustomField>
    <fullName>Firm_Group_Key__c</fullName>
    <caseSensitive>true</caseSensitive>
    <description>FSS: idempotent upsert key, firmId|group. External Id, Unique.</description>
    <externalId>true</externalId>
    <label>Firm Group Key</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>