force-app/main/default/objects/Firm_Product_Group_Rollup_USD__c/fields/Last_Refreshed__c.field-meta.xml
<CustomField>
    <fullName>Last_Refreshed__c</fullName>
    <description>FSS: per-row recompute timestamp.</description>
    <label>Last Refreshed</label>
    <type>DateTime</type>
</CustomField>