force-app/main/default/objects/Firm_Product_Group_Rollup_USD__c/fields/Won_ACV_AllTime_USD__c.field-meta.xml
<CustomField>
    <fullName>Won_ACV_AllTime_USD__c</fullName>
    <description>FSS: net annual contract value (USD) for this group, all time.</description>
    <label>Won ACV AllTime (USD)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>