force-app/main/default/objects/Firm_Product_Group_Rollup_USD__c/fields/Won_ACV_CFY_USD__c.field-meta.xml
<CustomField>
    <fullName>Won_ACV_CFY_USD__c</fullName>
    <description>FSS: net won ACV (USD) for this group, current fiscal year.</description>
    <label>Won ACV CFY (USD)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>