force-app/main/default/objects/Firm_Product_Group_Rollup_USD__c/fields/Won_Items_PFY__c.field-meta.xml
<CustomField>
    <fullName>Won_Items_PFY__c</fullName>
    <description>FSS: won line-item (Items) count for this group, prior fiscal year.</description>
    <label>Won Items PFY</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>