force-app/main/default/objects/Firm_Product_Group_Rollup_USD__c/fields/Won_Items_T12M__c.field-meta.xml
<CustomField>
    <fullName>Won_Items_T12M__c</fullName>
    <description>FSS: won line-item (Items) count for this group, trailing 12 months.</description>
    <label>Won Items T12M</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>