force-app/main/default/objects/Firm_Product_Group_Rollup_USD__c/fields/Won_Value_AllTime_USD__c.field-meta.xml
<CustomField>
    <fullName>Won_Value_AllTime_USD__c</fullName>
    <description>FSS: net USD line value for this group, all time.</description>
    <label>Won Value AllTime (USD)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>